@@ -34,3 +34,4 @@ Version 0.5 20090131
 ~~~~~~~~~~~
 Complete change from DifxMessageError to DifxMessageAlert
 Add Mark5Version message type
+Add Daughterboard information to Mark5Version messages
